auth_security/oauth2/manifests/oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 3
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - args:
        - --client-secret=b2F1dGgyLXByb3h5LWNsaWVudC1zZWNyZXQK
        - --client-id=oauth2-proxy
        - --cookie-secret=b0hpa3M1aDFiL2FSZGNXdHBQZ1hzZz09
        - --whitelist-domain=.microspray.io
        - --cookie-domain=.microspray.io
        - --oidc-issuer-url=https://sso.microspray.io

        - --provider=oidc
        - --email-domain=*
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180
        - --metrics-address=0.0.0.0:4190
        - --reverse-proxy=true
        - --set-xauthrequest=true
        - --pass-access-token=true
        - --set-authorization-header=true
        - --skip-provider-button=true
        # - --redirect-url=https://oauth2-proxy.microspray.io/oauth2/callback

        # Register a new application
        # https://github.com/settings/applications/new
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - name: http
          containerPort: 4180
          protocol: TCP
        - name: metrics
          containerPort: 4190
          protocol: TCP
