auth_security/oauth2/manifests/oauth2-svc.yaml
---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: http
  - name: metrics
    port: 4190
    protocol: TCP
    targetPort: metrics
  selector:
    k8s-app: oauth2-proxy
